# sglib

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: README.md
include/: sglib.h
include/Algorithm/: Random.h  Sort.h
include/Base/: SingleInstance.h
include/Commons/: Logger.h
include/Data/: TestData.h
include/Timer/: Timer.h
scripts/: make_test.bat
src/: CMakeLists.txt  sglib.cpp
src/Algorithm/: Random.cpp  Sort.cpp
src/Commons/: Logger.cpp
src/Data/: TestData.cpp
src/Timer/: Timer.cpp
test/: CMakeLists.txt
test/01_HelloWorld/: CMakeLists.txt  main.cpp
test/02_SOA_vs_AOS/: CMakeLists.txt  main.cpp
test/03_push_vs_emplace/: CMakeLists.txt  main.cpp
test/04_smart_pointer_vs_raw_pointer/: CMakeLists.txt  main.cpp
test/05_callable_simple/: CMakeLists.txt  main.cpp
test/06_stringview/: CMakeLists.txt  main.cpp
test/07_quicksort/: CMakeLists.txt  main.cpp
test/08_mergesort/: CMakeLists.txt  main.cpp
test/09_insertsort/: CMakeLists.txt  main.cpp
test/template/: CMakeLists.txt  main.cpp
