add_subdirectory(01_HelloWorld)
add_subdirectory(02_SOA_VS_AOS)
add_subdirectory(03_push_vs_emplace)
add_subdirectory(04_smart_pointer_vs_raw_pointer)
add_subdirectory(05_callable_simple)
add_subdirectory(06_stringview)
add_subdirectory(07_quicksort)
add_subdirectory(08_mergesort)
add_subdirectory(09_insertsort)